--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
 	"short_name": "WhimsicalJ",
-	"name": "Whimscalj personal website",
+	"name": "Whimiscalj personal website",
 	"icons": [
 		{
 			"src": "favicon.ico",
