--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
 		"start": "react-scripts start",
 		"predeploy": "npm run build",
 		"deploy": "gh-pages -d build",
-		"build": "GENERATE_SOURCEMAP=false react-scripts build",
+		"build": "set \"GENERATE_SOURCEMAP=false\" && react-scripts build",
 		"test": "react-scripts test",
 		"eject": "react-scripts eject"
 	},
